# ai-courses

./: .gitignore  README.md  langchain_2025_comprehensive_research.md
ag2-course/: 01_tools.py  02_converse.py  03_multiagent.py  04_rag.py  05_sequential_chat.py  OAI_CONFIG_LIST.json
agno-course/: .env.example  .gitignore  01_basic_agent.py  02_agents_with_tools.py  03_multi_agent_teams.py  04_memory_storage.py  05_agentos_fastapi.py  README.md  requirements.txt
arcadedev/: 00_simple_tool_call.py  00_tool_auth.py  01_simple_auth_tool.py  02_framework_tool.py  02_mcp_toolkit.py  04_crewai_mcp_gateway.py  claude.md
arcadedev/mcp_server/: pyproject.toml
arcadedev/mcp_server/src/my_server/: .env.example
atomic-agents-course/: 01_basic_agent.py  02_agent_with_tools.py  03_modular_example.py  README.md
crewai-amp/: .env.example  00_crew_starter.py  01_crew_cli.py  02_crew_api.py  README.md  crew_amp_starter.py  crewai_client.py  debug_kickoff.py  inspect_status.py  requirements.txt
crewai-first-agent/: README.md  edited_report.md  pyproject.toml  report.md
crewai-first-agent/src/my_first_agents/: crew.py  main.py
crewai-first-agent/src/my_first_agents/config/: agents.yaml  tasks.yaml
langchain-course/: .env.example  .gitignore  QUICKSTART.md  README.md  requirements.txt
langgraph-course/: .env.example  .gitignore  QUICKSTART.md  README.md  requirements.txt
llamaindex-course/: 01_first.py  02_llama_hub.py  03_agents.py  04_agent_memory.py  README.md
llamaparse-course/: 01_starter.py  02_advanced_rag.py
ollama-course/: langchain_ollama_request.py  (+2 more)
(+82 files in other folders)
